apps/demo-nginx/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: demo-nginx
  namespace: default
spec:
  selector:
    app: demo-nginx
  ports:
  - port: 80
    targetPort: 80
